# embassy-agb

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: build.yml
embassy-agb/: Cargo.toml  README.md
embassy-agb-macros/: Cargo.toml
embassy-agb-macros/src/: lib.rs
embassy-agb/src/: config.rs  display.rs  executor.rs  input.rs  lib.rs  sound.rs  time_driver.rs
embassy-agb/src/utils/: color.rs  mod.rs
examples/: Cargo.toml
examples/gfx/: coin.aseprite  goof.aseprite  grass.aseprite  rocket.aseprite  ship.aseprite
