[package]
name = "embassy-agb-macros"
version = "0.1.0"
edition = "2024"
description = "Macros for embassy-agb async Game Boy Advance development"
license = "MIT"
repository = "https://github.com/zpg6/embassy-agb"
keywords = ["embedded", "gba", "gameboy", "async", "macros"]
categories = ["embedded", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
