[package]
name = "embassy-agb"
version = "0.1.0"
edition = "2021"
authors = ["Zach Grimaldi <zpg6@pitt.edu>"]
description = "Embassy async support for Game Boy Advance development with agb"
license = "MIT"
repository = "https://github.com/zpg6/embassy-agb"
homepage = "https://github.com/zpg6/embassy-agb"
documentation = "https://docs.rs/embassy-agb"
keywords = ["embedded", "gba", "gameboy", "async", "embassy"]
categories = ["embedded", "no-std", "asynchronous", "game-engines"]

[features]
default = ["executor", "time-driver-timer2"]

## Enable embassy executor integration
executor = [
    "dep:embassy-executor",
    "embassy-executor/arch-spin",
    "embassy-executor/executor-thread",
]

## Enable embassy time integration
time = ["dep:embassy-time"]

## Use Timer0 as the time driver
time-driver-timer0 = ["_time-driver"]

## Use Timer1 as the time driver  
time-driver-timer1 = ["_time-driver"]

## Use Timer2 as the time driver
time-driver-timer2 = ["_time-driver"]

## Use Timer3 as the time driver
time-driver-timer3 = ["_time-driver"]

## Testing support
testing = []

# Internal features
_time-driver = [
    "dep:embassy-time-driver",
    "time",
    "embassy-time-driver/tick-hz-32_768",
]

[dependencies]
agb = { version = "0.22.6", features = [
    "embassy",
] }
embassy-agb-macros = { version = "0.1.0", path = "../embassy-agb-macros" }

# Embassy core
embassy-executor = { version = "0.9.1", optional = true }
embassy-time = { version = "0.5.0", optional = true }
embassy-time-driver = { version = "0.2.1", optional = true }
embassy-time-queue-utils = { version = "0.3.0" }
embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0.1.2" }

# Utilities
critical-section = "1.1"
portable-atomic = { version = "1.6.0", default-features = false, features = [
    "unsafe-assume-single-core",
    "fallback",
] }
heapless = { version = "0.8", default-features = false }

[build-dependencies]
proc-macro2 = "1.0"
quote = "1.0"

[package.metadata.docs.rs]
default-target = "thumbv4t-none-eabi"
cargo-args = ["-Zbuild-std=core,alloc"]
