[package]
name = "embassy-agb-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-agb = { path = "../embassy-agb", features = [
    "executor",
    "time",
    "time-driver-timer2",
] }
agb = { version = "0.22.6" }
embassy-executor = { version = "0.9.1", features = [
    "arch-spin",
    "executor-thread",
] }
portable-atomic = { version = "1.6.0", default-features = false, features = [
    "unsafe-assume-single-core",
    "fallback",
] }

[profile.dev]
opt-level = 3
debug = true

[profile.release]
opt-level = 3
lto = "fat"
debug = true
